@@ -20,10 +20,10 @@
 #ifndef BINDINGS_QT_RUNTIME_H_
 #define BINDINGS_QT_RUNTIME_H_
 
-#include "completion.h"
+#include "Completion.h"
+#include "Protect.h"
 #include "runtime.h"
 #include "runtime_method.h"
-#include "protect.h"
 
 #include <qbytearray.h>
 #include <qmetaobject.h>
